Core lib- Doc improvements to roles, ordering improvements.